# finance-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKPLAN.md  deployment_plan.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  specs.md  submission.txt  video_script.md
.agents/rules/ai_transparency/: RULE.md
.agents/rules/finance_logic/: RULE.md
.agents/rules/frontend_standards/: RULE.md
.agents/rules/project_infra/: RULE.md
.agents/rules/python_standards/: RULE.md
.agents/rules/scraping_ethics/: RULE.md
.agents/skills/docker_ops/: SKILL.md
.agents/skills/finance_domain/: SKILL.md
.agents/skills/frontend_dev/: SKILL.md
.agents/skills/python_dev/: SKILL.md
.agents/skills/responsible_scraping/: SKILL.md
.agents/workflows/: ci.md  commit.md  dev_setup.md  quality_check.md  testing.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: modeling_agent.py
backend/app/api/v1/: company.py  health.py  ingestion.py  modeling.py  router.py  search.py
backend/app/core/: ai.py  config.py  database.py  logging.py
backend/app/models/: company.py
backend/app/routers/: advisory.py  company.py  financial_model.py
backend/app/services/: document_processor.py  embedding_service.py  financials_service.py  forecasting.py  image_scraper.py  ingestion.py  market_data.py  redis_service.py  sec_ingestion.py  sec_insights.py  sec_search.py  vector_store.py  yfinance_service.py
backend/tests/: conftest.py  test_forecasting.py  test_health.py  test_modeling.py  test_search_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CompanyDashboard.tsx  FinancialsView.tsx  ForecastView.tsx  PriceChart.tsx  SearchBox.tsx
frontend/src/styles/: globals.css
